# random-team

./: README.md  pyproject.toml
data/: Baseball_Roster.xlsx  output.xlsx
random_team/: LoadData.py  main.py  player.py  position.py  randomizer.py
